Fixed layer menu scroll (overlap issue with footer)

--- a/client/styles/main.scss
+++ b/client/styles/main.scss
@@ -5533,3 +5533,17 @@ input#uploadFile0 {
   height: 100%;
   overflow: hidden;
 }
+/****************** layers box css  *****************/
+.checklist-block
+{
+  height:500px;
+}
+.popup-item.sub-nav-option {
+  padding: 9px 0px 9px 28px;
+
+}
+.popup-item.sub-nav-option .checkbox-default {
+  position: absolute;
+  right: -79px;
+  top: 12px;
+}
